<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CedarMaps Sample</string>
    <string name="action_settings">Settings</string>

    <string name="mainTestMap">Main Test Map</string>
    <string name="markersTestMap">Markers Test</string>
    <string name="itemizedOverlayTestMap">ItemizedIconOverlay</string>
    <string name="searchAPI">Geocode API</string>
    <string name="streetSearchAPIAdvanced">Advanced Geocode API</string>
    <string name="reverseGeocode">Reverse geocode API</string>
    <string name="drawerOpen">Open Nav Drawer</string>
    <string name="drawerClose">Close Nav Drawer</string>
    <string name="haghani_metro">مترو شهید حقانی</string>
    <string name="third_street">خیابان سوم</string>
    <string name="haghani_way">بزرگراه حقانی</string>
    <string name="tabrizian">خیابان تبریزیان</string>
    <string name="searching">در حال جستجو...</string>
    <string name="unkonown_error">خطایی پیش آمد</string>
    <string name="no_results">نتیجه‌ای یافت نشد</string>
    <string name="parse_error">خطای پردازش نتیجه</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

</resources>
