<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/mainTestMap"
            android:title="@string/mainTestMap"/>
        <item
            android:id="@+id/markersTestMap"
            android:title="@string/markersTestMap"/>
        <item
            android:id="@+id/itemizedOverlayTestMap"
            android:title="@string/itemizedOverlayTestMap"/>
        <item
            android:id="@+id/searchAPI"
            android:title="@string/searchAPI"/>
        <item
            android:id="@+id/streetSearchAPIAdvanced"
            android:title="@string/streetSearchAPIAdvanced"/>
        <item
            android:id="@+id/reverseGeocode"
            android:title="@string/reverseGeocode"/>
    </group>

</menu>
